fixes player breaking out of wrapper on small screens

--- a/styles/1-utils/_variables.module.scss
+++ b/styles/1-utils/_variables.module.scss
@@ -47,5 +47,5 @@ $radius-sm: 2px;
 $radius-md: 4px;
 $radius-lg: 6px;
 
-$navbar-height: 3.3rem;
+$navbar-height: 4rem;
 $navbar-link-padding: $sp-xs;
